--- a/arch/arm/configs/boeffla_Venom_defconfig
+++ b/arch/arm/configs/boeffla_Venom_defconfig
@@ -2,6 +2,8 @@
 # Automatically generated file; DO NOT EDIT.
 # Linux/arm 3.4.113 Kernel Configuration
 #
+# Boeffla-Venom-Kltespr
+#
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
